@@ -7,6 +7,8 @@ rtcontrib - compute contribution coefficients in a RADIANCE scene
 [
 .B "\-n nprocs"
 ][
+.B \-fo
+|
 .B \-r
 ][
 .B "\-e expr"
@@ -74,9 +76,12 @@ specification.
 If a destination begins with an exclamation mark ('!'), then
 a pipe is opened to a command and data is sent to its standard input.
 Otherwise, the destination is treated as a file.
-An existing file of the same name is clobbered, unless the
+An existing file of the same name will not be clobbered, unless the
+.I \-fo
+option is given.
+If instead the
 .I \-r
-option is specified, in which case data recovery is attempted.
+option is specified, data recovery is attempted on existing files.
 If an output specification contains a "%s" format, this will be
 replaced by the modifier name.
 The
